# fan_demo_v2

student/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
student/components/execute_plane/: CMakeLists.txt  execute_plane.c  execute_plane.h  model_data.cc  model_data.h  student_learning.c  student_learning.h  test_mfcc_feature.c  test_mfcc_feature.h  tflite_interpreter.cpp
student/components/observe_plane/: CMakeLists.txt  observe_plane.c  observe_plane.h
student/components/support_plane/: CMakeLists.txt  gpio_button.c  gpio_button.h  i2s_audio.c  i2s_audio.h  mqtt_client_app.c  mqtt_client_app.h  network_socket.c  network_socket.h  ota_http_client.c  ota_http_client.h  support_plane.c  support_plane.h  wifi_station.c  wifi_station.h
student/main/: CMakeLists.txt  Kconfig.projbuild  main.c
teacher/: README.md  config.json  s1_sample.py  s2_dsp32.py  s3_distance.py  s4_train.py  s5_validate.py
teacher/modules/: config_process.py  model_process.py  sample_process.py  signal_process.py  train_process.py
teacher/tests/: test_model.c  test_model.sh
